# manchester-analyzer

./: CMakeLists.txt  README.md
src/: ManchesterAnalyzer.cpp  ManchesterAnalyzer.h  ManchesterAnalyzerResults.cpp  ManchesterAnalyzerResults.h  ManchesterAnalyzerSettings.cpp  ManchesterAnalyzerSettings.h  ManchesterSimulationDataGenerator.cpp  ManchesterSimulationDataGenerator.h
